--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p><strong>Founder Name:</strong> Murali Gangapuri</p>
       <p><strong>Phone:</strong> 9052806225</p>
       <p><strong>Email:</strong> 3mtps@gmail.com</p>
-      <p><strong>Address:</strong> Sriram Nagar, Office: 5-102 Mor</p>
+      <p><strong>Address:</strong> Sriram Nagar, Office: 5-102 </p>
       <p><strong>What We Offer:</strong> The 3MTPS family provides premium services including gold loans, edible oils, dry fruits, pulses, spices, fertilizers, stationery, and more. Our main focus is customer health, wealth, and satisfaction.</p>
       <p>Our goal is to enrich the lives of our customers through excellent products and services. With 3MTPS, save money, save health, and live happily!</p>
     </div>
@@ -79,15 +79,15 @@
       { title: "Gold Loans", desc: "Our 3MTPS family offers loans up to 50% of your gold value at a minimal 1% monthly interest. We prioritize transparency and customer trust. Perfect for urgent needs without compromising safety.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/gold%20image%201.png", class:"goldloans" },
       { title: "Edible Oils", desc: "We provide a variety of edible oils including groundnut, sunflower, sesame, and coconut. All oils are fresh, tasty, and of premium quality. Our aim is to protect your health while delivering excellent taste.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/edible%20oils.png", class:"edibleoils" },
       { title: "Dry Fruits", desc: "Cashews, almonds, dates, and more. We ensure high quality, freshness, and affordability. Healthy snacking made easy with our 3MTPS products.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/3mt%20dryfruits.png", class:"dryfruits" },
-      { title: "Dry Fish & Mutton", desc: "Premium dried fish, prawns, and mutton. Carefully selected for quality and taste. Our products bring traditional flavors to your table.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/dry%20fish%20and%20dry%20motton.png", class:"dryfish" },
+      { title: "Dry Fish & Dry Mutton", desc: "Premium dried fish, prawns, and mutton. Carefully selected for quality and taste. Our products bring traditional flavors to your table.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/dry%20fish%20and%20dry%20motton.png", class:"dryfish" },
       { title: "Spices & Kitchen Essentials", desc: "Fresh turmeric, chili, coriander, and essential spices from organic farms. Enhance your dishes with the finest flavors while maintaining top quality.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/kitchen%20spices.png", class:"spices" },
-      { title: "Notebook Supply", desc: "High-quality notebooks and stationery for all levels from LKG to PhD. Durable and well-designed for effective learning and note-taking.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/note%20books%20stationery.png", class:"notebooks" },
+      { title: "Notebooks Supply", desc: "High-quality notebooks and stationery for all levels from LKG to PhD. Durable and well-designed for effective learning and note-taking.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/note%20books%20stationery.png", class:"notebooks" },
       { title: "Water Supply", desc: "Pure drinking water enriched with essential minerals. Our 3MTPS family ensures safe, clean water to maintain your health and hydration.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/water%20pic.png", class:"watersupply" },
       { title: "Pulses and Millets", desc: "Nutritious and tasty pulses and millets. We focus on quality and freshness to support healthy meals for all ages.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/millets%20and%20pulses.png", class:"pulses" },
-      { title: "Fertilizers", desc: "High-quality fertilizers to ensure better crop yields and healthy plants. Our products are designed for sustainable farming practices.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/fertilizers.png", class:"fertilizers" },
-      { title: "Education", desc: "Comprehensive educational materials and services for students of all levels. Supporting learning and skill development with quality resources.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/education.png", class:"education" },
+      { title: "Fertilizersand all types of seeds", desc: "High-quality fertilizers to ensure better crop yields and healthy plants. Our products are designed for sustainable farming practices.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/fertilizers.png", class:"fertilizers" },
+      { title: "Leagal Education", desc: "Comprehensive educational materials and services for students of all levels. Supporting learning and skill development with quality resources.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/education.png", class:"education" },
       { title: "Fruits & Vegetables", desc: "Fresh fruits and vegetables sourced directly from farmers. We ensure quality, taste, and nutritional value in every product.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/fruits%20and%20vegitables.png", class:"fruits" },
-      { title: "Consultancy Services", desc: "Professional consultancy for personal and business needs. Our experts provide reliable guidance to help you succeed.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/consultency%20img.png", class:"consultancy" },
+      { title: "Eduction Consultancy Services", desc: "Professional consultancy for personal and business needs. Our experts provide reliable guidance to help you succeed.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/consultency%20img.png", class:"consultancy" },
       { title: "Bags & Clothes Making", desc: "High-quality bags and clothing manufactured with care. Our products combine style, durability, and functionality.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/bags%20making%20-%20Copy.png", class:"bags" },
       { title: "Entertainment", desc: "Organizing events and entertainment services for community enjoyment. Our 3MTPS family brings fun and happiness to everyone.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/entertainment%20-%20Copy.png", class:"entertainment" }
     ];
@@ -139,4 +139,5 @@
   </script>
 </body>
 </html>
+
 
