--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       { title: "Notebooks Supply", desc: "High-quality notebooks and stationery for all levels from LKG to PhD. Durable and well-designed for effective learning and note-taking.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/note%20books%20stationery.png", class:"notebooks" },
       { title: "Water Supply", desc: "Pure drinking water enriched with essential minerals. Our 3MTPS family ensures safe, clean water to maintain your health and hydration.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/water%20pic.png", class:"watersupply" },
       { title: "Pulses and Millets", desc: "Nutritious and tasty pulses and millets. We focus on quality and freshness to support healthy meals for all ages.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/millets%20and%20pulses.png", class:"pulses" },
-      { title: "Fertilizersand all types of seeds", desc: "High-quality fertilizers to ensure better crop yields and healthy plants. Our products are designed for sustainable farming practices.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/fertilizers.png", class:"fertilizers" },
+      { title: "Fertilizers & seeds supply", desc: "High-quality fertilizers to ensure better crop yields and healthy plants. Our products are designed for sustainable farming practices.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/fertilizers.png", class:"fertilizers" },
       { title: "Leagal Education", desc: "Comprehensive educational materials and services for students of all levels. Supporting learning and skill development with quality resources.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/education.png", class:"education" },
       { title: "Fruits & Vegetables", desc: "Fresh fruits and vegetables sourced directly from farmers. We ensure quality, taste, and nutritional value in every product.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/fruits%20and%20vegitables.png", class:"fruits" },
-      { title: "Eduction Consultancy Services", desc: "Professional consultancy for personal and business needs. Our experts provide reliable guidance to help you succeed.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/consultency%20img.png", class:"consultancy" },
+      { title: "Eduction & Consultancy Services", desc: "Professional consultancy for personal and business needs. Our experts provide reliable guidance to help you succeed.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/consultency%20img.png", class:"consultancy" },
       { title: "Bags & Clothes Making", desc: "High-quality bags and clothing manufactured with care. Our products combine style, durability, and functionality.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/bags%20making%20-%20Copy.png", class:"bags" },
       { title: "Entertainment", desc: "Organizing events and entertainment services for community enjoyment. Our 3MTPS family brings fun and happiness to everyone.", img: "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/entertainment%20-%20Copy.png", class:"entertainment" }
     ];
@@ -139,6 +139,7 @@
   </script>
 </body>
 </html>
+
 
 
 
