Add new services to the 3MTPS website
Added new services including transport services, home-made grape wine supply, and free study articles promoting social welfare.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       { title: "Bags & Clothes Making", desc: "High-quality bags and clothing manufactured with care. Our products combine style, durability, and functionality.", img: IMAGE_BASE + "bags%20making%20-%20Copy.png", class:"bags" },
       { title: "Entertainment & Networking supply", desc: "Organizing events and entertainment services for community enjoyment. Our 3MTPS family brings fun and happiness to everyone.", img: IMAGE_BASE + "entertainment%20-%20Copy.png", class:"entertainment" },
 
+      // ✅ NEW SERVICES
       { title: "Transport Services", desc: "We provide safe and reliable local transport solutions for goods and passengers. 3MTPs ensures timely pickup, delivery, and community support.", img: IMAGE_BASE + "transport.jpg", class:"transport" },
       { title: "Home-made Grape Wine Supply", desc:"3MTPs proudly supplies hygienically prepared home-made grape wine. Quality, responsibility, and compliance with all local guidelines.", img: IMAGE_BASE + "the%20best%20wine.jpg", class:"wine" },
       { title: "Free Study Articles (Social Welfare)", desc:"We offer free educational articles and resources promoting social welfare, civic responsibility, and public awareness.", img: IMAGE_BASE + "article%203mtps.jpg", class:"articles" }
@@ -142,4 +143,3 @@
   </script>
 </body>
 </html>
-
