--- a/index.html
+++ b/index.html
@@ -78,25 +78,25 @@
     const IMAGE_BASE = "https://raw.githubusercontent.com/gangapu/3MTPS-Website/main/";
 
     const services = [
-      { title: "Gold Loans", desc: "Our 3MTPS family offers loans up to 50% of your gold value at a minimal 1% monthly interest. We prioritize transparency and customer trust. Perfect for urgent needs without compromising safety.", img: IMAGE_BASE + "gold%20image%201.png", class:"goldloans" },
-      { title: "Edible Oils", desc: "We provide a variety of edible oils including groundnut, sunflower, sesame, and coconut. All oils are fresh, tasty, and of premium quality. Our aim is to protect your health while delivering excellent taste.", img: IMAGE_BASE + "edible%20oils.png", class:"edibleoils" },
-      { title: "Dry Fruits", desc: "Cashews, almonds, dates, and more. We ensure high quality, freshness, and affordability. Healthy snacking made easy with our 3MTPS products.", img: IMAGE_BASE + "3mt%20dryfruits.png", class:"dryfruits" },
-      { title: "Dry Fish & Dry Mutton", desc: "Premium dried fish, prawns, and mutton. Carefully selected for quality and taste. Our products bring traditional flavors to your table.", img: IMAGE_BASE + "dry%20fish%20and%20dry%20motton.png", class:"dryfish" },
-      { title: "Spices & Kitchen Essentials", desc: "Fresh turmeric, chili, coriander, and essential spices from organic farms. Enhance your dishes with the finest flavors while maintaining top quality.", img: IMAGE_BASE + "kitchen%20spices.png", class:"spices" },
-      { title: "Notebooks Supply", desc: "High-quality notebooks and stationery for all levels from LKG to PhD. Durable and well-designed for effective learning and note-taking.", img: IMAGE_BASE + "note%20books%20stationery.png", class:"notebooks" },
-      { title: "Water Supply", desc: "Pure drinking water enriched with essential minerals. Our 3MTPS family ensures safe, clean water to maintain your health and hydration.", img: IMAGE_BASE + "water%20pic.png", class:"watersupply" },
-      { title: "Pulses and Millets", desc: "Nutritious and tasty pulses and millets. We focus on quality and freshness to support healthy meals for all ages.", img: IMAGE_BASE + "millets%20and%20pulses.png", class:"pulses" },
-      { title: "Fertilizers & seeds supply", desc: "High-quality fertilizers to ensure better crop yields and healthy plants. Our products are designed for sustainable farming practices.", img: IMAGE_BASE + "fertilizers.png", class:"fertilizers" },
-      { title: "Leagal Education", desc: "Comprehensive educational materials and services for students of all levels. Supporting learning and skill development with quality resources.", img: IMAGE_BASE + "education.png", class:"education" },
-      { title: "Fruits & Vegetables", desc: "Fresh fruits and vegetables sourced directly from farmers. We ensure quality, taste, and nutritional value in every product.", img: IMAGE_BASE + "fruits%20and%20vegitables.png", class:"fruits" },
-      { title: "Eduction & Consultancy Services", desc: "Professional consultancy for personal and business needs. Our experts provide reliable guidance to help you succeed.", img: IMAGE_BASE + "consultency%20img.png", class:"consultancy" },
-      { title: "Bags & Clothes Making", desc: "High-quality bags and clothing manufactured with care. Our products combine style, durability, and functionality.", img: IMAGE_BASE + "bags%20making%20-%20Copy.png", class:"bags" },
-      { title: "Entertainment & Networking supply", desc: "Organizing events and entertainment services for community enjoyment. Our 3MTPS family brings fun and happiness to everyone.", img: IMAGE_BASE + "entertainment%20-%20Copy.png", class:"entertainment" },
-
-      // ✅ NEW SERVICES
-      { title: "Transport Services", desc: "We provide safe and reliable local transport solutions for goods and passengers. 3MTPs ensures timely pickup, delivery, and community support.", img: IMAGE_BASE + "transport.jpg", class:"transport" },
-      { title: "Home-made Grape Wine Supply", desc:"3MTPs proudly supplies hygienically prepared home-made grape wine. Quality, responsibility, and compliance with all local guidelines.", img: IMAGE_BASE + "the%20best%20wine.jpg", class:"wine" },
-      { title: "Free Study Articles (Social Welfare)", desc:"We offer free educational articles and resources promoting social welfare, civic responsibility, and public awareness.", img: IMAGE_BASE + "article%203mtps.jpg", class:"articles" }
+      { title: "Gold Loans", desc: "Our 3MTPS family offers loans up to 50% of your gold value at a minimal 1% monthly interest. We prioritize transparency and customer trust.", img: IMAGE_BASE + "gold%20image%201.png" },
+      { title: "Edible Oils", desc: "We provide a variety of edible oils including groundnut, sunflower, sesame, and coconut.", img: IMAGE_BASE + "edible%20oils.png" },
+      { title: "Dry Fruits", desc: "Cashews, almonds, dates, and more. We ensure high quality and freshness.", img: IMAGE_BASE + "3mt%20dryfruits.png" },
+      { title: "Dry Fish & Dry Mutton", desc: "Premium dried fish, prawns, and mutton with rich flavor.", img: IMAGE_BASE + "dry%20fish%20and%20dry%20motton.png" },
+      { title: "Spices & Kitchen Essentials", desc: "Fresh turmeric, chili, coriander, and more.", img: IMAGE_BASE + "kitchen%20spices.png" },
+      { title: "Notebooks Supply", desc: "High-quality notebooks and stationery.", img: IMAGE_BASE + "note%20books%20stationery.png" },
+      { title: "Water Supply", desc: "Pure drinking water enriched with essential minerals.", img: IMAGE_BASE + "water%20pic.png" },
+      { title: "Pulses and Millets", desc: "Nutritious and tasty pulses and millets.", img: IMAGE_BASE + "millets%20and%20pulses.png" },
+      { title: "Fertilizers & Seeds Supply", desc: "High-quality fertilizers for better crops.", img: IMAGE_BASE + "fertilizers.png" },
+      { title: "Legal Education", desc: "Educational materials and services for students.", img: IMAGE_BASE + "education.png" },
+      { title: "Fruits & Vegetables", desc: "Fresh fruits and vegetables from local farmers.", img: IMAGE_BASE + "fruits%20and%20vegitables.png" },
+      { title: "Education & Consultancy Services", desc: "Professional consultancy for business and education.", img: IMAGE_BASE + "consultency%20img.png" },
+      { title: "Bags & Clothes Making", desc: "Stylish and durable bags and clothing.", img: IMAGE_BASE + "bags%20making%20-%20Copy.png" },
+      { title: "Entertainment & Networking Supply", desc: "Fun and entertainment services for all ages.", img: IMAGE_BASE + "entertainment%20-%20Copy.png" },
+      { title: "Transport Services", desc: "Safe and reliable transport for goods and passengers.", img: IMAGE_BASE + "transport.jpg" },
+      { title: "Home-made Grape Wine Supply", desc: "Hygienically prepared grape wine.", img: IMAGE_BASE + "the%20best%20wine.jpg" },
+      { title: "Free Study Articles (Social Welfare)", desc: "Educational resources promoting social welfare.", img: IMAGE_BASE + "article%203mtps.jpg" },
+      // ✅ NEW SERVICE ADDED
+      { title: "Dry Feed for Domestic Animals", desc: "3MTPS now supplies nutritious dry feed for cows, goats, dogs, and other domestic animals to promote their health and growth.", img: IMAGE_BASE + "dry%20feed%20for%20domastic%20animals.png" }
     ];
 
     const colors = ['#e03c31','#fbb034','#fff100','#31bc47','#2196f3','#9c27b0','#ff4081','#00bcd4','#ff9800','#8bc34a'];
@@ -117,20 +117,16 @@
     function renderServices() {
       const grid = document.getElementById('servicesGrid');
       grid.innerHTML = "";
-      services.forEach(s => {
+      services.forEach((s, i) => {
+        const color = colors[i % colors.length];
         const card = document.createElement('div');
-        card.className = `service-card ${s.class}`;
-        const words = s.title.split(' ');
-        let coloredTitle = '';
-        for(let i=0;i<words.length;i++){
-          const color = colors[i % colors.length];
-          coloredTitle += `<span style="color:${color}">${words[i]}</span> `;
-        }
+        card.className = "service-card";
         card.innerHTML = `
           <img src="${s.img}" alt="${s.title}" class="service-image"
-               onerror="this.src='https://via.placeholder.com/400x300?text=3MTPS+Service+Image'">
-          <h3 class="service-title">${coloredTitle}</h3>
-          <p class="service-description">${s.desc}</p>`;
+               onerror="this.src='https://via.placeholder.com/400x300?text=3MTPS+Service'">
+          <h3 class="service-title" style="color:${color}">${s.title}</h3>
+          <p class="service-description">${s.desc}</p>
+        `;
         grid.appendChild(card);
       });
     }
