--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ header p.tagline{font-size:1.2rem;opacity:0.8;letter-spacing:0.15em;margin-botto
 }
 .full-service-block img {
     width: 100%;
-    max-height: 450px; /* Full-size image display */
-    object-fit: cover;
+    /* max-height: 450px; <--- REMOVED for full-size appearance */
+    object-fit: cover; 
     display: block;
     border-radius: 8px;
     border: 3px solid #003a5d;
@@ -676,8 +676,8 @@ const serviceData = [
         title: "3MTPS Entertainment",
         img: IMG + "entertainment%20-%20Copy.png",
         content: `
-            <div style="padding:25px;font-family:Segoe UI, sans-serif;line-height:1.7;background:#e8f5e9;">
-                <h1 style="font-size:38px;font-weight:900; background:linear-gradient(to right, #4CAF50, #8BC34A, #CDDC39); -webkit-background-clip:text;color:transparent;"> 3MTPS ENTERTAINMENT </h1>
+            <div style="padding:28px;font-family:Segoe UI, sans-serif;line-height:1.8;background:#e8f5e9;">
+                <h1 style="font-size:42px;font-weight:900; background:linear-gradient(to right, #4CAF50, #8BC34A, #CDDC39); -webkit-background-clip:text;color:transparent;margin-bottom:12px;"> 3MTPS ENTERTAINMENT </h1>
                 <h2 style="font-size:28px;font-weight:900; color:#004D40;"> Meaningful • Inspirational • Family-Friendly </h2>
                 <p style="font-size:19px; color:#333;">
                 <strong style="color:#1565c0;">3MTPS Entertainment</strong> is dedicated to creating <span style="color:#d81b60;font-weight:600;">high-quality, ethical, and inspirational media content</span> for families and communities worldwide. We provide entertainment that is positive, supports moral care, inspirational life stories, education, skills development, and helpful knowledge for youth and adults. Every video or show carries a positive message.
@@ -926,7 +926,7 @@ function renderServices() {
         fullServiceBlock.innerHTML = `
             <h3 style="font-size: 2.5rem; color: #003a5d; text-align: center; margin-bottom: 20px; border-bottom: 4px double #ffc107; padding-bottom: 10px;">${s.title}</h3>
             <div style="margin-bottom: 30px; border-radius: 15px; overflow: hidden; box-shadow: 0 8px 16px rgba(0,0,0,0.15);">
-                <img src="${s.img}" alt="${s.title}" style="width: 100%; max-height: 450px; object-fit: cover; display: block;">
+                <img src="${s.img}" alt="${s.title}" style="width: 100%; object-fit: cover; display: block;">
             </div>
             ${s.content}
             <div style="height: 50px; border: 0; background: linear-gradient(90deg, #e03c31, #fbb034, #fff100, #31bc47, #2196f3); margin: 50px 0; border-radius: 5px;"></div>
