Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ const serviceData = [
                 This system supports various organizational and community elections, offering a completely <span style="color:#2e7d32;font-weight:600;">fraud-free and secure experience</span>. All personal data such as photo, fingerprint, Aadhaar number, and login details are <strong style="color:#d32f2f;">deleted within seconds</strong> after the vote is recorded. Only the vote count remains safely in the server.
                 </p>
                 <p style="font-size:18px;color:#333;">
-                In the future, there may be a small charge of <strong style="color:#1565c0;">₹2 per vote</strong>: <br>• ₹1 for secure data deletion <br>• ₹1 for generating the verified vote <br><br> Voters can check the database after voting. If data is not deleted, they can file a legal complaint. 3MTPS will provide support and compensation according to rules.
+                In the future, there may be a small charge of <strong style="color:#1565c0;">₹free per vote</strong>: <br>• ₹secure data deletion <br>• ₹generating the verified vote <br><br> Voters can check the database after voting. If data is not deleted, they can file a legal complaint. 3MTPS will provide support and compensation according to rules.
                 </p>
                 <h2 style=" font-size:28px;font-weight:900;margin-top:32px; background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60,#e91e63,#f50057,#ff4081); -webkit-background-clip:text;color:transparent; ">
                 Trust • Security • Transparency
